--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,39 @@
-html{
-    background-color: black;
+/* Общие стили */
+*,
+::before,
+::after {
+    box-sizing: border-box;
 }
-.block{
+
+body {
+    margin: 0;
+    font-family: Merienda, sans-serif;
+    line-height: 1.2;
+    background: #000;
+}
+
+p {
+    color: #99721d;
+}
+
+a {
+    color: inherit;
+}
+
+/* Блок */
+.block {
     display: grid;
     grid-template-rows: fit-content(0);
 }
-.bg-video{
+
+/* Контейнер для видео */
+.video-container {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     overflow: hidden;
-    margin: 1vw;
 }
-.bg-video video{
+
+.video-container video {
     display: block;
     width: 100%;
     height: 100%;
@@ -19,27 +41,113 @@ html{
     pointer-events: none;
     background: #f005 linear-gradient(to right, #ff0000, #fdcf58);
 }
-.content{
+
+/* Контент */
+.content {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     display: flex;
     flex-wrap: wrap;
     align-content: start;
     border: 1vw solid #000;
-    font-size: 9.7vw;
+    font-size: 11.7vw;
 }
-.text{
+
+@media (min-width: 600px) {
+    .content {
+        font-size: 7.7vw;
+    }
+}
+
+/* Текст */
+.text {
     flex-grow: 1;
     color: #fff;
     background: #000;
+    white-space: nowrap;
     box-shadow: 0.1em 0 0 0 #000, -0.1em 0 0 0 #000;
     z-index: 2;
 }
-.hole-1,.hole-2,.hole-3,.hole-4{
+
+/* Стили для текста с отверстием на мобильных */
+.hole-mob + .text {
+    box-shadow: 0.1em 0 0 0 #000;
+}
+
+/* Псевдоэлементы для текста */
+.text + .br + .text::before,
+.text .br + .text + .text::before,
+.text + .hole-pc + .text::before {
+    content: "\00a0";
+    background: #000;
+}
+
+@media (min-width: 600px) {
+    .text + .br + .text::before,
+    .text .br + .text + .text::before,
+    .text + .hole-pc + .text::before {
+        display: none;
+    }
+}
+
+/* Отверстие */
+.hole {
     flex-grow: 9999;
     border-top: 0.45em solid #000;
     border-bottom: 0.22em solid #000;
+    width: 10%;
 }
-.hole-1{
 
+/* Отверстие для мобильных */
+.hole-mob {
+    /* Базовые стили для мобильных */
+}
+
+@media (min-width: 600px) {
+    .hole-mob {
+        flex-shrink: 1;
+        flex-grow: 0;
+        min-width: 1px;
+        width: auto;
+        height: auto;
+        border: none;
+        background-color: black;
+    }
+
+    .hole-mob::before {
+        content: "\00a0";
+        background: #000;
+    }
+
+    .br + .hole-mob {
+        min-width: 1px;
+    }
+
+    .br + .hole-mob::before {
+        display: none;
+    }
+}
+
+/* Отверстие для ПК */
+.hole-pc {
+    display: none;
+}
+
+@media (min-width: 600px) {
+    .hole-pc {
+        display: block;
+    }
+}
+
+/* Перенос строки */
+.br {
+    display: block;
+    width: 100%;
+    height: 0;
+}
+
+@media (min-width: 600px) {
+    .br {
+        display: none;
+    }
 }
