--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
 /* Общие стили */
-@font-face {
-    font-family: 'Prata';
-    src: url('../fonts/Prata.ttf') format('ttf');
-    font-weight: normal;
-    font-style: normal;
-}
 *,
 ::before,
 ::after {
@@ -13,7 +7,7 @@
 
 body {
     margin: 0;
-    font-family: Prata;
+    font-family: Arial, sans-serif;
     line-height: 1.2;
     background: #000;
 }
